--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </header>
                 <footer class="major ">
                     <ul class="actions special ">
-                        <li><a href="https://drive.google.com/file/d/1CkaXTUAF1IK7HDHpsnqmjgwge8Aips4B/view?usp=sharing" class="button primary ">VIEW/DOWNLOAD RESUME</a></li>
+                        <li><a href="https://drive.google.com/file/d/1zmMkI1ghV9-8qR_UsAhuelpKuV-TSsgE/view?usp=drive_link" class="button primary ">VIEW/DOWNLOAD RESUME</a></li>
                     </ul>
                 </footer>
             </section>
