--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header id="header" class="alt">
             <h1>Nathan N. Tolosa</h1>
             <div id="front-dev">
-                <p> Front End Web Developer</p>
+                <p> Full Stack Web Developer</p>
             </div>
             <div>
                 <a href="https://github.com/nathan-nigussie">@nathan.tolosa</a>
@@ -148,7 +148,7 @@
                 </header>
                 <footer class="major ">
                     <ul class="actions special ">
-                        <li><a href="https://drive.google.com/file/d/1zmMkI1ghV9-8qR_UsAhuelpKuV-TSsgE/view?usp=drive_link" class="button primary ">VIEW/DOWNLOAD RESUME</a></li>
+                        <li><a href="https://drive.google.com/file/d/1zmMkI1ghV9-8qR_UsAhuelpKuV-TSsgE/view?usp=sharing" class="button primary ">VIEW/DOWNLOAD RESUME</a></li>
                     </ul>
                 </footer>
             </section>
