--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
                 <h2>Nathan Tolosa</h2>
                 <dl class="alt " id="contact ">
                     <dt>Address</dt>
-                    <dd>Kala-Matti 3 A 22, Espoo FINALND</dd>
+                    <dd> Espoo FINALND</dd>
                     <dt>Phone</dt>
-                    <dd>(358) 407-457-931</dd>
                     <dt>Email</dt>
                     <dd><a href="mailto:bogale.nigussie@gmail.com ">nathantolosa11@gmail.com</a></dd>
                 </dl>
