--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <header class="major">
                             <h2>ABOUT ME</h2>
                         </header>
-                        <p>I am Front End web Developer. I am striving to expand my knowledge and skills in a collaborative environment to develop quality software solutions that address and solve business problems. </p>
+                        <p>I am Full-stack web Developer. I am striving to expand my knowledge and skills in a collaborative environment to develop quality software solutions that address and solve business problems. </p>
 
                         <!-- <ul class="actions">
                             <li><a href="generic.html" class="button">Learn More</a></li>
@@ -95,6 +95,14 @@
                     <li>
                         <span id="certificates" class="icon solid major style5  fa-certificate"></span>
                         <button class="collapsible">CERTIFICATES</button>
+			    <!-- <h3>certificate</h3> -->
+                        <div class="c-content" id="edu">
+                            <p>- Cybersecurity Task automation with Python </br>
+                                (Google,March 2024-) </br>
+                               Linux and SQL</br>
+                                (Google,Feb 2024)
+                            </p>
+                        </div>
                     </li>
                 </ul>
                 <footer class="major">
@@ -169,7 +177,6 @@
                 <dl class="alt " id="contact ">
                     <dt>Address</dt>
                     <dd> Espoo FINALND</dd>
-                    <dt>Phone</dt>
                     <dt>Email</dt>
                     <dd><a href="mailto:bogale.nigussie@gmail.com ">nathantolosa11@gmail.com</a></dd>
                 </dl>
