--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 										<div class="panel-body">
 											<div class="row">
 												<div class="col-md-6">
-													<p> Prospective MS Student at
+													<p> New MS Student at
 														University of Maryland,
 														Baltimore County (UMBC)
 													</p>
