--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 																						<h4 class="panel-title">
 																							<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour"
 																								aria-expanded="false" aria-controls="collapseFour">
-																								Information Technology (Bsc) , MUAS
+																								Information Technology Courses , MUAS
 																							</a>
 																						</h4>
 																					</div>
@@ -292,7 +292,7 @@
 																						<h4 class="panel-title">
 																							<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
 																								aria-expanded="false" aria-controls="collapseFive">
-																								Food & Biochemical Technology (BSc),
+																								Biochemical & Food Technology (BSc),
 																								BDU
 																							</a>
 																						</h4>
