--- a/index.html
+++ b/index.html
@@ -502,11 +502,11 @@
 <div class="row row-pt-md">
 	<div class="col-md-4 text-center">
 		<div class="services color-1  blog-entry">
-			<p>
+			<br>
 				<a class="blog-img"><img src="images\google.png" class="img-responsive"></a>
 
 				<a class="desc" href="https://www.coursera.org/account/accomplishments/records/YAM83SHN9LKB">
-					Linux and SQL</a>
+					Linux and SQL</a></br>
 
 				<a href="https://www.coursera.org/account/accomplishments/records/PVXWZT29NGVF">Foundations
 					of Cyberssecurity</a></br>
