--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 																						<div class="panel-body">
 																							<div class="row">
 																								<div class="col-md-6">
+																									<p>Metropolia University of Applied Science, Finland</p>
 																									<p>Completed courses:
 																									<p>Introduction to
 																										SQL Server & Engineering Mathematics
