--- a/index.html
+++ b/index.html
@@ -271,8 +271,7 @@
 																						<div class="panel-body">
 																							<div class="row">
 																								<div class="col-md-6">
-																									<p>Metropolia University of Applied Science, Finland</p>
-																									<p>Completed courses:
+																																																	<p>Completed courses:
 																									<p>Introduction to
 																										SQL Server & Engineering Mathematics
 																				
@@ -282,6 +281,7 @@
 																								</div>
 																								<div class="col-md-6">
 																									<p>September 2014 - March 2015 , Finland
+																										<p>Metropolia University of Applied Science</p>
 																									</p>
 																								</div>
 																							</div>
